--- a/progetto/pom.xml
+++ b/progetto/pom.xml
@@ -35,6 +35,12 @@
             <version>3.1.0</version> <!-- Usa l'ultima versione disponibile -->
         </dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.14</version>
+        </dependency>
+
 
     </dependencies>
 
